ENS Names Overflowing issue with shorten

--- a/src/style.scss
+++ b/src/style.scss
@@ -114,9 +114,7 @@ textarea {
 }
 
 .column {
-  width: 180px;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  width: 160px;
 }
 
 .anim-fade-in {
